--- a/.github/workflows/corn.yml
+++ b/.github/workflows/corn.yml
@@ -13,7 +13,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
       - name: ping
-        run: ping my.freenom.com
+        run: ping my.freenom.com -c 4
       - name: download env
         run: wget https://raw.githubusercontent.com/star574/freenom/main/.env.example && cp .env.example .env
       - name: user
